--- a/prac_07/miles_to_kms.kv
+++ b/prac_07/miles_to_kms.kv
@@ -3,27 +3,31 @@ BoxLayout:
     BoxLayout:
         orientation: 'horizontal'
         TextInput:
-            id: input_number
-            text: '7'
+            id: input_miles_number
+            text: 'Enter Miles'
             font_size: 48
             multiline: False
+            on_text: app.handle.convert(self.text)
 
         BoxLayout:
             orientation: 'vertical'
             Button:
                 text: 'Up'
                 font_size: 48
+                on_press: app.handle.add(input_miles_number, 1)
             Button:
                 text: 'Down'
                 font_size: 48
+                on_press: app.handle.add(input_miles.text, -1)
 
     BoxLayout:
         orientation: 'vertical'
         Button:
             id: convert
-            text: 'Convert m to km'
+            text: 'Convert M to KM'
+            on_press: app.handle.convert()
 
         Label:
             id: output_label
             font_size: 48
-            color: 1, 0, 0, 1
+            color: 1, 1, 0, 1
