--- a/prac_07/miles_to_kms.kv
+++ b/prac_07/miles_to_kms.kv
@@ -3,31 +3,30 @@ BoxLayout:
     BoxLayout:
         orientation: 'horizontal'
         TextInput:
-            id: input_miles_number
-            text: 'Enter Miles'
+            id: input_miles
             font_size: 48
-            multiline: False
-            on_text: app.handle.convert(self.text)
-
+            on_text: app.handle_convert(self.text)
         BoxLayout:
             orientation: 'vertical'
             Button:
                 text: 'Up'
                 font_size: 48
-                on_press: app.handle.add(input_miles_number, 1)
+                on_press: app.handle_increment(input_miles.text, 1)
+
             Button:
                 text: 'Down'
                 font_size: 48
-                on_press: app.handle.add(input_miles.text, -1)
+                on_press: app.handle_increment(input_miles.text, -1)
 
     BoxLayout:
         orientation: 'vertical'
-        Button:
-            id: convert
-            text: 'Convert M to KM'
-            on_press: app.handle.convert()
+#        Button:
+#            id: convert
+#            text: 'Convert M to KM'
+#            on_press: app.handle_convert()
 
         Label:
             id: output_label
+            text: app.output_km
             font_size: 48
-            color: 1, 1, 0, 1
+            color: (1, 1, 0, 1)
